# cpptier

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  build.bat  build.sh  compile_commands.json
.cache/clangd/index/: client.cpp.9E6D8A0994A2F39F.idx  client.h.9A460FE297936927.idx  server.cpp.8C54370B79D45A8E.idx  server.h.417EBD7B2E719188.idx  websock.cpp.8651D1B259B887DA.idx  websock.h.52492E369C79C033.idx
src/: c_tier_client.cpp  c_tier_server.cpp
src/client/: client.cpp  client.h
src/database/: database.cpp  database.h
src/scenes/: login_menu.h  main_menu.h  scene.h  scene_manager.h
src/server/: server.cpp  server.h
src/socket/: sslwebsock.h  websock.cpp  websock.h
